--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "license": "MIT",
     "scripts": {
         "build": "npx tsc",
-        "test": "node ./build/tests/index.js"
+        "test": "node ./build/tests/index.js",
+        "gen:docs": "npx typedoc --mode library --out docs --exclude src/tests* src/index.ts"
     },
     "devDependencies": {
         "prettier": "^2.1.2",
         "tslint": "^6.1.3",
+        "typedoc": "^0.17.0-3",
         "typescript": "^4.0.2"
     },
     "dependencies": {
