--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "scripts": {
         "build": "npx tsc",
         "test": "node ./build/tests/demo.js",
-        "gen:docs": "npx typedoc --mode library --out docs --exclude src/tests* src/index.ts"
+        "gen:docs": "npx typedoc --mode library --out docs --exclude src/tests* src/index.ts",
+        "prepublish": "yarn run build"
     },
     "devDependencies": {
         "prettier": "^2.1.2",
