--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,5 +20,6 @@ jobs:
               run: |
                   yarn install
                   yarn run build
+                  yarn run test
               env:
                   CI: true
