--- a/package.json
+++ b/package.json
@@ -24,12 +24,20 @@
     ],
     "scripts": {
         "build": "npx tsc",
-        "test": "node ./build/tests/demo.js",
+        "test": "ts-mocha  tests/**/*.spec.ts",
         "gen:docs": "npx typedoc --mode library --out docs --exclude src/tests* --name \"OASA Telematics API\" --includeVersion src/index.ts",
-        "prepublish": "yarn run build"
+        "prepublish": "yarn run build",
+        "prettier:base": "npx prettier --config ../../.prettierrc",
+        "prettier:check": "yarn run prettier:base -- --list-different \"src/**/*.{ts}\"",
+        "prettier:write": "yarn run prettier:base -- --write \"src/**/*.{ts}\""
     },
     "devDependencies": {
+        "@types/chai": "^4.2.12",
+        "@types/mocha": "^8.0.3",
+        "chai": "^4.2.0",
+        "mocha": "^8.1.3",
         "prettier": "^2.1.2",
+        "ts-mocha": "^7.0.0",
         "tslint": "^6.1.3",
         "typedoc": "^0.17.0-3",
         "typescript": "^4.0.2"
