--- a/package.json
+++ b/package.json
@@ -32,20 +32,20 @@
         "prettier:write": "yarn run prettier:base -- --write \"src/**/*.{ts}\""
     },
     "devDependencies": {
-        "@types/chai": "^4.2.12",
-        "@types/mocha": "^8.0.3",
+        "@types/chai": "^4.2.14",
+        "@types/mocha": "^8.2.0",
         "chai": "^4.2.0",
-        "mocha": "^8.1.3",
-        "prettier": "^2.1.2",
-        "ts-mocha": "^7.0.0",
+        "mocha": "^8.2.1",
+        "prettier": "^2.2.1",
+        "ts-mocha": "^8.0.0",
         "tslint": "^6.1.3",
-        "typedoc": "^0.17.0-3",
-        "typescript": "^4.0.2"
+        "typedoc": "^0.20.12",
+        "typescript": "^4.1.3"
     },
     "dependencies": {
-        "@types/lodash": "^4.14.161",
+        "@types/lodash": "^4.14.167",
         "@types/node-fetch": "^2.5.7",
-        "fuse.js": "^6.4.1",
+        "fuse.js": "^6.4.5",
         "lodash": "^4.17.20",
         "node-fetch": "^2.6.1"
     },
